# eterna-core

./: .gitignore  CODE_OF_CONDUCT  CONTRIBUTOR_LICENSE_AGREEMENT  LICENCE.md  LICENSE  LICENSE_GRANTS_POLICY  LICENSE_PRINCIPIA  LICENSE_SIMULATOR  LICENSORS  README.md  principia_anima.md  principia_eterna.md  pyproject.toml
simulator/: anima_agent.py  anima_entity.py  anima_model.py  simulator.py  simulator_ui.py
simulator/components/: svg_environment.py
system/rules/: GHERKIN_FSM.md  play.feature
system/rules/_core/: _contested_dice_resolution.feature
