[project]
name = "anima"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Simon Austen", email = "hello@simonausten.me"},
]
dependencies = ["nicegui>=2.14.1", "agentpy>=0.1.5", "numpy==1.24.4"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
